<resources>
    <string name="app_name">Bill Please</string>
    <string name="amt">Amount</string>
    <string name="num_of_pax">Num of Pax</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="svs">SVS</string>
    <string name="no_svs">NO SVS</string>
    <string name="togglebutton2">ToggleButton</string>
    <string name="no_gst">NO GST</string>
    <string name="gst">GST</string>
    <string name="discount">Discount(%)</string>
    <string name="cash">Cash</string>
    <string name="paynow">PayNow</string>
    <string name="split">SPLIT</string>
    <string name="reset">RESET</string>
    <string name="total_bill">Total Bill:</string>
    <string name="each_pays">Each pays:</string>
    <string name="enter_amount_spend">Enter Amount spend</string>
    <string name="enter_number_of_paxs">Enter number of paxs</string>
    <string name="enter_discount">Enter discount</string>
</resources>